--- a/.github/workflows/bottle.yml
+++ b/.github/workflows/bottle.yml
@@ -29,7 +29,7 @@ jobs:
 
   bottle:
     needs: [get-platform]
-    runs-on: ${{ needs.get-platform.outputs.os }}
+    runs-on: ${{ fromJson(needs.get-platform.outputs.os) }}
     defaults:
       run:
         working-directory: tea.xyz/var/pantry
