--- a/.github/workflows/index-data.yml
+++ b/.github/workflows/index-data.yml
@@ -19,3 +19,4 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: us-east-1
           SQS_GENERATE_PACKAGE_DETAILS_URL: ${{ secrets.SQS_GENERATE_PACKAGE_DETAILS_URL }}
+          TEA_PANTRY_PATH: ${{ github.workspace }}
