--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,9 @@ jobs:
         with:
           repository: teaxyz/pantry.core
       - uses: teaxyz/setup@v0
-      - run: echo "TEA_PANTRY_PATH=${{ env.GITHUB_WORKSPACE }}" >> $GITHUB_ENV
       - run: scripts/check-core-sizes.ts ${{ inputs.projects }}
+        env:
+          TEA_PANTRY_PATH: ${{ github.workspace }}
 
   build:
     runs-on: ${{ matrix.platform.os }}
@@ -49,15 +50,14 @@ jobs:
         if: matrix.platform.os == 'macos-11'
         run: sudo mv /usr/local/bin/* /tmp/
 
-      - name: configure scripts PATH
+      - name: configure tea env
         run: |
           echo "$PWD/scripts:$TEA_PREFIX/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
-          echo "TEA_PANTRY_PATH=${{ env.GITHUB_WORKSPACE }}" >> $GITHUB_ENV
+          echo "TEA_PANTRY_PATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
 
       - run: sort.ts ${{ inputs.projects }}
         id: sorted
 
-      # running out of /opt because only pantry.core has these scripts
       - run: build.ts ${{ steps.sorted.outputs.pkgs }}
         id: build
         env:
@@ -121,9 +121,7 @@ jobs:
         id: tea
 
       - name: configure scripts PATH
-        run: |
-          echo "$PWD/scripts:$TEA_PREFIX/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
-          echo "TEA_PANTRY_PATH=${{ env.GITHUB_WORKSPACE }}" >> $GITHUB_ENV
+        run: echo "$PWD/scripts:$TEA_PREFIX/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
 
       - uses: actions/download-artifact@v3
         with:
@@ -133,6 +131,8 @@ jobs:
         working-directory: ${{ steps.tea.outputs.prefix }}
 
       - run: test.ts ${{ inputs.projects }}
+        env:
+          TEA_PANTRY_PATH: ${{ github.workspace }}
 
       - run:
           echo "HAS_SECRETS=$HAS_SECRETS" >>$GITHUB_ENV
@@ -162,9 +162,7 @@ jobs:
         id: tea
 
       - name: configure scripts PATH
-        run: |
-          echo "$PWD/scripts:$TEA_PREFIX/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
-          echo "TEA_PANTRY_PATH=${{ env.GITHUB_WORKSPACE }}" >> $GITHUB_ENV
+        run: echo "$PWD/scripts:$TEA_PREFIX/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
 
       - uses: actions/download-artifact@v3
         with:
