--- a/.github/workflows/new-version.yml
+++ b/.github/workflows/new-version.yml
@@ -13,60 +13,48 @@ permissions:
   issues: write
 
 jobs:
-  build:
-    strategy:
-        matrix:
-          platform:
-            - darwin+x86-64
-            - linux+x86-64
-            - darwin+aarch64
-            - linux+aarch64
-    uses: ./.github/workflows/build.yml
-    with:
-      projects: ${{ inputs.projects }}
-      platform: ${{ matrix.platform }}
-    secrets: inherit
-  bottle:
-    strategy:
-        matrix:
-          platform:
-            - darwin+x86-64
-            - linux+x86-64
-            - darwin+aarch64
-            - linux+aarch64
-    needs: [build]
-    uses: ./.github/workflows/bottle.yml
-    with:
-      new-version: true
-      platform: ${{ matrix.platform }}
-    secrets: inherit
-  index_data:
-    needs: [bottle]
-    uses: ./.github/workflows/index-data.yml
-    with:
-      projects: ${{ inputs.projects }}
-    secrets: inherit
-  complain:
-    if: failure()
-    needs: [build, bottle]
+  new-version:
     runs-on: ubuntu-latest
+    continue-on-error: true
+    strategy:
+        matrix:
+          platform:
+            - darwin+x86-64
+            - linux+x86-64
+            - darwin+aarch64
+            - linux+aarch64
     steps:
-      - uses: martialonline/workflow-status@v3
-        id: status
-      - uses: rtCamp/action-slack-notify@v2
-        if: ${{ env.SLACK_WEBHOOK != '' }}
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
-          SLACK_MESSAGE: new-version:${{ inputs.projects }} ${{ steps.status.outputs.status }}
-          SLACK_COLOR: ${{ steps.status.outputs.status }}
-      - uses: actions/checkout@v3
-        if: ${{ steps.status.outputs.status == 'failure' }}
-      - uses: JasonEtco/create-an-issue@v2
-        if: ${{ steps.status.outputs.status == 'failure' }}
-        with:
-          filename: .github/NEW_VERSION_ISSUE_TEMPLATE.md
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PACKAGE: ${{ inputs.projects }}
-          URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+    - uses: teaxyz/pantry.core/.github/workflows/build.yml@main
+      name: build
+      with:
+        projects: ${{ inputs.projects }}
+        platform: ${{ matrix.platform }}
+    - uses: teaxyz/pantry.core/.github/workflows/bottle.yml@main
+      name: bottle
+      with:
+        new-version: true
+        platform: ${{ matrix.platform }}
+    - uses: teaxyz/pantry.core/.github/workflows/index-data.yml@main
+      name: index
+      with:
+        projects: ${{ inputs.projects }}
+    - uses: martialonline/workflow-status@v3
+      if: failure()
+      id: status
+    - uses: rtCamp/action-slack-notify@v2
+      if: failure() && ${{ env.SLACK_WEBHOOK != '' }}
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
+        SLACK_MESSAGE: new-version:${{ inputs.projects }} (${{ matrix.platform }}) ${{ steps.status.outputs.status }}
+        SLACK_COLOR: ${{ steps.status.outputs.status }}
+    - uses: actions/checkout@v3
+      if: ${{ steps.status.outputs.status == 'failure' }}
+    - uses: JasonEtco/create-an-issue@v2
+      if: ${{ steps.status.outputs.status == 'failure' }}
+      with:
+        filename: .github/NEW_VERSION_ISSUE_TEMPLATE.md
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PACKAGE: ${{ inputs.projects }} (${{ matrix.platform }})
+        URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
