--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,12 +25,13 @@ jobs:
 
   bottle-pr:
     strategy:
-          matrix:
-            platform:
-              - darwin+x86-64
-              - linux+x86-64
-              - darwin+aarch64
-              - linux+aarch64
+      fail-fast: false
+      matrix:
+        platform:
+        - darwin+x86-64
+        - linux+x86-64
+        - darwin+aarch64
+        - linux+aarch64
     needs: [cd]
     if: ${{ needs.cd.outputs.HAS_ARTIFACTS == 'true' }}
     uses: ./.github/workflows/bottle.yml
