--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,13 @@ jobs:
           PATTERNS: projects/**/package.yml
   build:
     strategy:
-        matrix:
-          platform:
-            - darwin+x86-64
-            - linux+x86-64
-            - darwin+aarch64
-            - linux+aarch64
+      fail-fast: false
+      matrix:
+        platform:
+        - darwin+x86-64
+        - linux+x86-64
+        - darwin+aarch64
+        - linux+aarch64
     needs: [get-diff]
     uses: ./.github/workflows/build.yml
     with:
