--- a/.github/workflows/new-version.yml
+++ b/.github/workflows/new-version.yml
@@ -8,53 +8,27 @@ on:
         required: true
         type: string
 
-permissions:
-  contents: read
-  issues: write
 
 jobs:
-  new-version:
-    runs-on: ubuntu-latest
-    continue-on-error: true
+  build:
     strategy:
-        matrix:
-          platform:
-            - darwin+x86-64
-            - linux+x86-64
-            - darwin+aarch64
-            - linux+aarch64
-    steps:
-    - uses: teaxyz/pantry.core/.github/workflows/build.yml@main
-      name: build
-      with:
-        projects: ${{ inputs.projects }}
-        platform: ${{ matrix.platform }}
-    - uses: teaxyz/pantry.core/.github/workflows/bottle.yml@main
-      name: bottle
-      with:
-        new-version: true
-        platform: ${{ matrix.platform }}
-    - uses: teaxyz/pantry.core/.github/workflows/index-data.yml@main
-      name: index
-      with:
-        projects: ${{ inputs.projects }}
-    - uses: martialonline/workflow-status@v3
-      if: failure()
-      id: status
-    - uses: rtCamp/action-slack-notify@v2
-      if: failure() && ${{ env.SLACK_WEBHOOK != '' }}
-      env:
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-        SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
-        SLACK_MESSAGE: new-version:${{ inputs.projects }} (${{ matrix.platform }}) ${{ steps.status.outputs.status }}
-        SLACK_COLOR: ${{ steps.status.outputs.status }}
-    - uses: actions/checkout@v3
-      if: ${{ steps.status.outputs.status == 'failure' }}
-    - uses: JasonEtco/create-an-issue@v2
-      if: ${{ steps.status.outputs.status == 'failure' }}
-      with:
-        filename: .github/NEW_VERSION_ISSUE_TEMPLATE.md
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PACKAGE: ${{ inputs.projects }} (${{ matrix.platform }})
-        URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+      fail-fast: false
+      matrix:
+        platform:
+        - darwin+x86-64
+        - linux+x86-64
+        - darwin+aarch64
+        - linux+aarch64
+    uses: ./.github/workflows/build.yml
+    with:
+      new-version: true
+      projects: ${{ inputs.projects }}
+      platform: ${{ matrix.platform }}
+    secrets: inherit
+  index_data:
+    needs: [build]
+    if: success()
+    uses: ./.github/workflows/index-data.yml
+    with:
+      projects: ${{ inputs.projects }}
+    secrets: inherit
