--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -126,6 +126,12 @@ jobs:
         env:
           HAS_SECRETS: ${{ secrets.AWS_S3_CACHE != null }}
 
+  wut:
+    runs-on: ubuntu-latest
+    needs: [test]
+    steps:
+    - run: echo ${{ inputs.new-version }}
+
   bottle:
     needs: [test]
     if: inputs.new-version == 'true'
