--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,7 +136,7 @@ jobs:
     secrets: inherit
 
   complain:
-    needs: [test, bottle]
+    needs: [test]
     if: inputs.new-version == true && failure()
     uses: ./.github/workflows/complain.yml
     with:
