see if node^19.5 is the problem

--- a/projects/npmjs.com/package.yml
+++ b/projects/npmjs.com/package.yml
@@ -10,7 +10,8 @@ provides:
   - bin/npx
 
 dependencies:
-  nodejs.org: '>=14'
+  # nodejs.org: '>=14'
+  nodejs.org: '>=14<19.5'
 
 build:
   dependencies:
