--- a/projects/nodejs.org/package.yml
+++ b/projects/nodejs.org/package.yml
@@ -30,16 +30,19 @@ build:
     ./configure $ARGS
 
     # FIXME: currently, dynamic builds of nodejs.org are segfaulting on linux/x86-64
-    if test "{{hw.platform}}/{{hw.arch}}" = "linux/x86-64"; then
-      for i in out/tools/v8_gypfiles/gen-regexp-special-case.target.mk out/test_crypto_engine.target.mk; do
-        if test -f "$i"; then
-          sed -i.bak -e 's/\-static//g' $i
-          rm $i.bak
-        fi
-      done
-    fi
+    # if test "{{hw.platform}}/{{hw.arch}}" = "linux/x86-64"; then
+    #   for i in out/tools/v8_gypfiles/gen-regexp-special-case.target.mk out/test_crypto_engine.target.mk; do
+    #     if test -f "$i"; then
+    #       sed -i.bak -e 's/\-static//g' $i
+    #       rm $i.bak
+    #     fi
+    #   done
+    # fi
 
     make --jobs {{ hw.concurrency }} install
+
+    ls -l {{prefix}}/bin
+    ldd {{prefix}}/bin/*
   env:
     ARGS:
     - --without-npm
