--- a/projects/rubygems.org/package.yml
+++ b/projects/rubygems.org/package.yml
@@ -13,9 +13,12 @@ build:
     ruby setup.rb --prefix={{prefix}} --env-shebang
 
 test:
+  dependencies:
+    tea.xyz/gx/cc: c99
+    tea.xyz/gx/make: '*'
   script: |
     gem install awesome_print
-    ruby -e 'require "awesome_print"' -e 'ap $LOAD_PATH'
+    ruby -e 'require "rubygems"' -e 'require "awesome_print"' -e'ap $LOAD_PATH'
     gem install hexapdf
     hexapdf version
 
