--- a/.github/workflows/index-data.yml
+++ b/.github/workflows/index-data.yml
@@ -12,6 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/cache@v2
+        with:
+          path: $HOME/.cache/deno
+          key: ${{ runner.os }}-deno-deps
       - uses: teaxyz/setup@v0
       - run: ./scripts/index-packages.ts ${{ inputs.projects }}
         env:
