--- a/.github/workflows/index-data.yml
+++ b/.github/workflows/index-data.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: $HOME/.cache/deno
-          key: ${{ runner.os }}-deno-deps
+          key: ${{ runner.os }}-deno-queue-detail-ingestion-${{ hashFiles('deno.jsonc')}}
       - uses: teaxyz/setup@v0
       - run: ./scripts/index-packages.ts ${{ inputs.projects }}
         env:
