--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: $HOME/.cache/deno
-          key: ${{ runner.os }}-deno-deps
+          key: ${{ runner.os }}-deno-cd-${{ hashFiles('deno.jsonc')}}
       - uses: teaxyz/setup@v0
       - run: ./scripts/map-projects-to-githubs.ts
         env:
