--- a/.github/workflows/bottle.yml
+++ b/.github/workflows/bottle.yml
@@ -10,6 +10,10 @@ on:
       platform:
         required: true
         type: string
+    outputs:
+      pr:
+        description: 'The PR number'
+        value: ${{ jobs.bottle.outputs.pr }}
 
 jobs:
   get-platform:
@@ -213,30 +217,6 @@ jobs:
           AWS_REGION: us-east-1
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-  cleanup:
-    runs-on: ubuntu-latest
-    needs: [bottle, upload]
-    if: ${{ !inputs.new-version }}
-    steps:
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-      - run: |
-          REPO=$(echo ${{github.repository}} | sed -e 's_teaxyz/__')
-
-          if test -z "$PR"; then
-            echo "no PR to clean up"
-            exit 0
-          fi
-
-          aws s3 rm --recursive s3://$AWS_S3_CACHE/pull-request/$REPO/$PR
-        env:
-          AWS_S3_CACHE: ${{ secrets.AWS_S3_CACHE }}
-          PR: ${{ needs.bottle.outputs.pr }}
 
   complain:
     needs: [upload]
