--- a/projects/deno.land/package.yml
+++ b/projects/deno.land/package.yml
@@ -20,7 +20,7 @@ runtime:
 build:
   script: |
     # https://github.com/denoland/deno/issues/15596 -- reported fixed in 1.25.3
-    if test {{ version.major }} -eq 1 -a {{ version.minor }} -eq 25 -a {{ version.patch }} -lt 3; then
+    if semverator satisfies '>=1.25.0<1.25.4' {{ version }}; then
       find ext/ffi/tinycc -maxdepth 0 -empty -exec \
         git clone https://github.com/TinyCC/tinycc.git {} \;
 
@@ -32,18 +32,21 @@ build:
 
     # FIXME: until we unblock rust-lang.org>1.65.0, we need a feature flag
     # to compile deno.land
-    git apply props/unzip_option_feature.diff
+    if semverator satisfies '<1.66.0' {{ deps.rust-lang.org.version }}; then
+      git apply props/unzip_option_feature.diff
+    fi
 
     cargo build --release
     mkdir -p "{{ prefix }}"/bin
     mv target/release/deno "{{ prefix }}"/bin
   dependencies:
     git-scm.org: 2       # to build tinycc
-    rust-lang.org: 1
+    rust-lang.org: ">=1<1.67||~1.68" #1.67.0 doesn't build
     rust-lang.org/cargo: ^0.65
     llvm.org: '>=13'     # macOS/aarch64 requires this (FIXME only dep where needed)
     curl.se: '*'         # required to download v8 (python is another option)
     tea.xyz/gx/make: '*' # required to build the libffi parts
+    crates.io/semverator: '*'
 
 test:
   script: deno --version
