--- a/deno.jsonc
+++ b/deno.jsonc
@@ -17,7 +17,13 @@
   "tea": {
     "dependencies": {
       "deno.land": "^1.30"
+    },
+    "env": {
+      // if your primary tea.prefix is somewhere else then you’ll
+      // need to `tea --sync` in this dev-env
+      "TEA_PANTRY_PATH": "{{srcroot}}:{{home}}/.tea/tea.xyz/var/pantry",
+      "TEA_PREFIX": "{{srcroot}}/tea.out"
     }
   },
-  "importMap": "https://raw.githubusercontent.com/teaxyz/cli/v0.22.1/import-map.json"
+  "importMap": "https://raw.githubusercontent.com/teaxyz/cli/v0.22/import-map.json"
 }
