--- a/projects/npmjs.com/package.yml
+++ b/projects/npmjs.com/package.yml
@@ -16,11 +16,10 @@ build:
   dependencies:
     crates.io/semverator: '*'
   script: |
-    if semverator satisfies '^8' {{ version }}; then
+    if semverator satisfies '^8,>=9.4.2' {{ version }}; then
       ARGS="--install-links"
     fi
 
     node . install --global --prefix={{prefix}} $ARGS
 
-test:
-  npx -q tldr ls
+test: npx -q tldr ls
