--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
           PATTERNS: projects/**/package.yml
       - id: diff
         run: |
-          RESULT=$(echo ${{ steps.get-diff.outputs.diff }} | sed 's#projects/\(.*\)/.*#\1#' | tr '/' ' ')
+          RESULT=$(echo ${{ steps.get-diff.outputs.diff }} | sed 's#projects/\(.*\)/.*#\1#')
           echo "diff=$RESULT" >> $GITHUB_OUTPUT
   build:
     strategy:
