#256 add AWS env vars in indexing script

--- a/.github/workflows/index-data.yml
+++ b/.github/workflows/index-data.yml
@@ -21,4 +21,6 @@ jobs:
         env:
           TEA_PANTRY_PATH: ${{ github.workspace }}
           AWS_REGION: us-east-1
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           SQS_GENERATE_PACKAGE_DETAILS_URL: ${{ secrets.SQS_GENERATE_PACKAGE_DETAILS_URL }}
