test add GITHUB_TOKEN

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,6 +125,7 @@ jobs:
       - run: tea +tea.xyz/brewkit test ${{ inputs.projects }}
         env:
           TEA_PANTRY_PATH: ${{ github.workspace }}
+          GITHUB_TOKEN: ${{github.token}}
 
       - name: post
         run:
