fix(ruby/rubygems)
Ruby is pulling in system gmp

--- a/projects/ruby-lang.org/package.yml
+++ b/projects/ruby-lang.org/package.yml
@@ -20,7 +20,7 @@ build:
   script: |
     patch -p1 < props/mkconfig.rb.diff
 
-    ./configure --prefix="{{prefix}}" --enable-load-relative --disable-rubygems
+    ./configure --prefix="{{prefix}}" --enable-load-relative --disable-rubygems --without-gmp
     make --jobs {{hw.concurrency}} install
 
     cd "{{prefix}}/bin"
