missed this in all the updates

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
           prefix: /opt
 
       - name: sanitize macOS runners
-        if: matrix.platform.os == 'macos-11'
+        if: fromJson(needs.get-platform.outputs.build-os) == 'macos-11'
         run: sudo mv /usr/local/bin/* /tmp/
 
       - name: configure tea env
