--- a/projects/rubygems.org/package.yml
+++ b/projects/rubygems.org/package.yml
@@ -29,7 +29,7 @@ test:
   script: |
     gem install awesome_print
     ruby -e 'require "rubygems"' -e 'require "awesome_print"' -e'ap $LOAD_PATH'
-    gem install hexapdf --bindir=. --env-shebang
+    gem install hexapdf --bindir=.
     ./hexapdf version
 
 provides:
